fix(primevue.css): adjust float label positioning and button padding for better alignment

--- a/src/primevue.css
+++ b/src/primevue.css
@@ -9,18 +9,22 @@
 
   --p-floatlabel-font-weight: 400;
   --p-floatlabel-position-x: 0.5rem;
+  --p-floatlabel-position-y: 0.85rem;
   --p-floatlabel-transition-duration: .2s;
-  --p-floatlabel-over-active-top: -0.5rem;
+  --p-floatlabel-over-active-top: -1rem;
   --p-floatlabel-active-font-size: 0.75rem;
 
   --p-button-padding-x: 1rem;
-  --p-button-padding-y: 0.5rem;
+  --p-button-padding-y: 0.25rem;
   --p-button-border-radius: 10rem;
   --p-button-label-font-weight: 500;
 
   --p-button-primary-color: var(--color-gray);
   --p-button-primary-background: var(--color-lila);
   --p-button-primary-border-color: var(--color-orange);
+  --p-button-primary-hover-color: var(--color-gray);
+  --p-button-primary-hover-background: var(--color-lila);
+  --p-button-primary-hover-border-color: var(--color-orange);
 }
 
 .p-inputtext {
@@ -32,4 +36,13 @@
   border-bottom: solid 2px var(--color-blue) !important;
   width: 100%;
   resize: none;
+}
+
+.p-button {
+  box-shadow: 0 0 0 0 var(--color-orange) !important;
+  transition: box-shadow .2s ease-in-out !important;
+}
+
+.p-button:hover {
+  box-shadow: -.25rem .25rem 0 0 var(--color-orange) !important;
 }
